# otel-ui

./: .gitignore  Dockerfile.bridge  Makefile  README.md
.github/workflows/: docker.yml  pages.yml
backend/: Cargo.toml
backend/src/: db.rs  main.rs  otlp.rs  state.rs  ws.rs
collector/: otlp-collector.yml
frontend/: build.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
frontend/e2e/: demo-mode.spec.ts  navigation.spec.ts  welcome.spec.ts
frontend/public/: style.css
frontend/src/: App.tsx  main.tsx
frontend/src/__tests__/: graph.test.ts  hide-rules.test.ts  utils.test.ts
frontend/src/canvas/: background.ts  camera.ts  flamegraph.ts  layout.ts  renderer.ts
frontend/src/components/: CorrelationKeyDialog.tsx  DemoConfigDialog.tsx  DiagramView.tsx  Header.tsx  HideRulesDialog.tsx  HistoryConfigDialog.tsx  HistoryControls.tsx  LogsView.tsx  MetricsView.tsx  NodeDetailPanel.tsx  SpansView.tsx  StatisticsView.tsx  TracesPanel.tsx  WelcomeScreen.tsx
frontend/src/core/: colors.ts  demo.ts  graph.ts  history-client.ts  theme.ts  types.ts  utils.ts  ws-client.ts
frontend/src/hooks/: useCorrelationKeyPreference.ts  useHideRules.ts  useHistoryPlayback.ts  useWebSocket.ts
frontend/src/panels/: hide-rules.ts  traces-table.ts  viz.ts
