[package]
name = "otel-ui-backend"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "otel-ui-backend"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# WebSocket
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# OTLP gRPC server (receive spans from collector)
tonic = { version = "0.14", features = ["gzip"] }
opentelemetry-proto = { version = "0.31", features = ["gen-tonic", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tracing / Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
